#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([suniq], [1.0], [https://github.com/chernjie/suniq/issues])
AC_CONFIG_SRCDIR([suniq.cpp])
dnl AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

AC_OUTPUT
