#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([suniq], [1.0], [https://github.com/chernjie/suniq/issues])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([suniq.cpp])
dnl AC_CONFIG_HEADERS([config.h])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
